# rustybar

./: Cargo.toml  config.toml.example  default.nix  flake.nix  shell.nix
src/: async_iter.rs  config.rs  main.rs  output.rs  tile.rs
src/tiles/: battery.rs  hostname.rs  iwd.rs  load.rs  memory.rs  mod.rs  time.rs
