[package]
name = "rustybar"
version = "0.1.0"
authors = ["Artemis Tosini <me@artem.ist>"]
edition = "2018"


[dependencies]
chrono = "0.4"
dbus = "0.8"
dbus-tokio = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
smart-default = "0.6"
tokio = { version = "0.2", features = ["full"] }
uuid = { version = "0.8", features = [ "v4" ] }
