[package]
name = "rustybar"
version = "0.1.0"
authors = ["Artemis Tosini <me@artem.ist>"]
edition = "2018"

[features]
check_latency = []

[dependencies]
async-trait = "0.1"
chrono = "0.4"
dbus = "0.8"
dbus-tokio = "0.5"
futures = "0.3"
futures-util = "0.3"
pin-project = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
smart-default = "0.6"
structopt = "0.3"
tokio = { version = "0.2", features = ["full"] }
toml = "0.5"
uuid = { version = "0.8", features = [ "v4" ] }

[profile.release]
incremental = false
codegen-units = 1
lto = true
