[package]
name = "rustybar"
version = "0.1.0"
authors = ["Artemis Tosini <me@artem.ist>", "Skye Jensen <me@skye-c.at>"]
edition = "2018"

[features]
check_latency = []

[dependencies]
async-trait = "0.1"
chrono = "0.4"
dbus = "0.9"
dbus-tokio = "0.7"
futures = "0.3"
futures-async-stream = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
smart-default = "0.6"
structopt = "0.3"
tokio = { version = "1", features = ["fs", "io-std", "io-util", "time", "rt", "macros", "rt-multi-thread"] }
tokio-stream = { version = "0.1", features = ["time"]}
toml = "0.5"
uuid = { version = "0.8", features = [ "v4" ] }

[profile.release]
incremental = false
codegen-units = 1
lto = true
